--- a/QWEN/white.html
+++ b/QWEN/white.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QWEN - Home</title>
+    <title>QWEN - whitepaper</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="/Qwenc.png">
 </head>
 <body>
     <header>
@@ -12,10 +13,10 @@
         <button class="hamburger">☰</button>
         <nav class="nav-menu">
             <ul>
-                <li class="current-page">Home</li>
-                <a href="#About" ><li>About</li></a>
-                <a href="#Contact"><li>Contact</li></a>
-                <a href="#Presale"><li>Presale</li></a>
+                <a href="index.html" ><li class="current-page">Home</li></a>
+                <a href="index.html" ><li>About</li></a>
+                <a href="index.html"><li>Contact</li></a>
+                <a href="index.html"><li>Presale</li></a>
                 <div class="tokenomics"><a href="#whitepaper">W</a></div>
             </ul>
         </nav>
