--- a/QWEN/index.html
+++ b/QWEN/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QWEN - Home</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="/Qwenc.png">
 </head>
 <body>
     <header>
@@ -47,10 +48,10 @@
     <div class="head-tab">Presale</div>
     <div class="reveal-presale">
         <img src="Qwenc.png" alt="">
-        <h2><span style="color: gold; font-weight: bold; font-size: 28px;">Name:</span> QWEN</h2>
-        <h2><span style="color: gold; font-weight: bold; font-size: 28px;">Ticker:</span> $QWEN</h2>
-        <h2><span style="color: gold; font-weight: bold; font-size: 28px;">CA:</span> GFbvFBoLCYGMpeQtcZrne6P1JgkeAqHaNyPf8A5RAWgt</h2>
-        <h2><span style="color: gold; font-weight: bold; font-size: 28px;">Total supply:</span> 10,000,000</h2>
+        <h2><span style="color: gold; font-weight: bold; font-size: 24px;">Name:</span> QWEN</h2>
+        <h2><span style="color: gold; font-weight: bold; font-size: 24px;">Ticker:</span> $QWEN</h2>
+        <h2><span style="color: gold; font-weight: bold; font-size: 24px;">CA:</span> GFbvFBoLCYGMpeQtcZrne6P1JgkeAqHaNyPf8A5RAWgt</h2>
+        <h2><span style="color: gold; font-weight: bold; font-size: 24px;">Total supply:</span> 10,000,000</h2>
         <h2>Presale not started. Start Date:TBA </h2>  
     </div>
 </section>
